# RaftCodingChallenge

./: .env  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
raft_agent/: main.py
